[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-trax"
version = "0.8.0"
description = "A Comprehensive Framework for Georeferenced Vehicle Trajectory Extraction from Drone Imagery"
authors = [
    { name = "Robert Fonod", email = "robert.fonod@ieee.org" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["trajectory-extraction", "trajectory-analysis", "object-detection", "object-tracking", "object-stabilization", "georeferencing", "computer-vision", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "ultralytics[extra]>=8.0,<9.0",
    "lapx>=0.5.2",
    "stabilo>=1.2.0",
    "geopandas>=1.0.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pysrt>=1.1.2",
    "tifffile",
    "comet_ml",
]

[project.optional-dependencies]
dev = [
    "ultralytics[dev]",
]

[project.urls]
Homepage = "https://github.com/rfonod/geo-trax/"
Repository = "https://github.com/rfonod/geo-trax/"
Changelog = "https://github.com/rfonod/geo-trax/releases"
Issues = "https://github.com/rfonod/geo-trax/issues/"

[tool.setuptools]
packages = { find = { where = ["."], include = ["utils", "utils.*"] } }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', "B", 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]