# Overview:
# This pyproject.toml manages the build, packaging, and distribution of the geo-trax library.
# It defines project metadata, dependencies, and tool settings.
#
# Key Sections:
# - [build-system]: Build requirements and backend (setuptools).
# - [project]: Metadata, required and optional dependencies.
# - [project.optional-dependencies]: Optional packages for development (dev) and model export (export).
# - [project.scripts]: The 'geotrax' console command (see geotrax/cli.py for subcommands).
# - [tool.*]: Tool configurations (setuptools, ruff, pytest).
#
# Installation:
#   pip install geo-trax                # from PyPI; installs the 'geotrax' CLI and bundled configs
#   pip install -e .                    # core; -e (editable) reflects code changes without reinstalling
#   pip install -e '.[dev]'             # core + dev (pip)
#   pip install -e '.[export]'          # core + export (pip)
#   poetry install                      # core (Poetry; auto-manages virtualenv)
#   poetry install --extras dev         # core + dev (Poetry)
#   poetry install --extras export      # core + export (Poetry)
#   uv venv --python 3.11 && uv pip install -e .           # core (uv; faster)
#   uv venv --python 3.11 && uv pip install -e '.[dev]'    # core + dev (uv)
#   uv venv --python 3.11 && uv pip install -e '.[export]' # core + export (uv)

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-trax"
dynamic = ["version"]
description = "A Comprehensive Framework for Georeferenced Vehicle Trajectory Extraction from Drone Imagery"
authors = [
    { name = "Robert Fonod", email = "robert.fonod@ieee.org" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["trajectory-extraction", "trajectory-analysis", "object-detection", "object-tracking", "object-stabilization", "georeferencing", "computer-vision", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "ultralytics[extra]>=8.4.64,<9.0",
    "lapx>=0.5.2",
    "stabilo>=1.2.1",
    "geopandas>=1.0.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pysrt>=1.1.2",
    "tifffile",
    "comet_ml",
]

[project.optional-dependencies]
dev = [
    "ultralytics[dev]",
    "pytest>=6.0",
    "ruff",
]
export = [
    "ultralytics[export-base]",  # ONNX export/optimization/runtime via the Ultralytics export backend (onnx, onnxslim, onnxruntime, ...)
]

[project.urls]
Homepage = "https://github.com/rfonod/geo-trax/"
Repository = "https://github.com/rfonod/geo-trax/"
Changelog = "https://github.com/rfonod/geo-trax/releases"
Issues = "https://github.com/rfonod/geo-trax/issues/"

[project.scripts]
geotrax = "geotrax.cli:main"

[tool.setuptools]
packages = { find = { where = ["."], include = ["geotrax", "geotrax.*"] } }

[tool.setuptools.dynamic]
version = { attr = "geotrax.__version__" }

[tool.setuptools.package-data]
geotrax = ["cfg/*.yaml", "cfg/**/*.yaml"]  # bundle the default configuration tree in wheels

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', "B", 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]